# tidal-cli

./: README.md  stack.yaml  tidal-cli.cabal
